--- a/assets/sass/_sb.scss
+++ b/assets/sass/_sb.scss
@@ -17,8 +17,8 @@
 			}
 
 			&:active {
-				background-color: darken(_palette(accent2, bg), 5);
-				opacity: 0.4;
+				// background-color: darken(_palette(accent2, bg), 5);
+				// opacity: 0.4;
 			}
 		
 
