--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1292,7 +1292,7 @@ blockquote {
 
 code {
   background: rgba(144, 144, 144, 0.075);
-  border-radius: 4px;
+  border-radius: 0px;
   border: solid 1px #191919;
   font-family: "Neue Helvetica W02", monospace;
   font-size: 0.9em;
@@ -1370,10 +1370,9 @@ textarea {
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none;
-  background: rgba(144, 144, 144, 0.075);
-  border-radius: 4px;
+  background: #69F7EB;
+  border-radius: 0px;
   border: none;
-  border: solid 1px #191919;
   color: inherit;
   display: block;
   outline: 0;
@@ -1418,7 +1417,9 @@ textarea {
     right: 0;
     text-align: center;
     top: 0;
-    width: 2.75em; }
+    width: 2.75em;
+    border: none;
+    background-color: #69F7EB; }
   .select-wrapper select::-ms-expand {
     display: none; }
 
@@ -1465,7 +1466,7 @@ input[type="radio"] {
     input[type="checkbox"] + label:before,
     input[type="radio"] + label:before {
       background: rgba(144, 144, 144, 0.075);
-      border-radius: 4px;
+      border-radius: 0px;
       border: solid 1px #191919;
       content: '';
       display: inline-block;
@@ -1488,7 +1489,7 @@ input[type="radio"] {
     box-shadow: 0 0 0 1px #fff; }
 
 input[type="checkbox"] + label:before {
-  border-radius: 4px; }
+  border-radius: 0px; }
 
 input[type="radio"] + label:before {
   border-radius: 100%; }
@@ -1515,7 +1516,6 @@ input[type="radio"] + label:before {
 
 /* Box */
 .box {
-  border-radius: 4px;
   border: solid 1px #191919;
   margin-bottom: 2em;
   padding: 1.5em; }
@@ -1862,7 +1862,7 @@ button,
   margin: 0 0 2em 0; }
   .grid-demo span {
     background: white;
-    border-radius: 4px;
+    border-radius: 0px;
     color: rgba(0, 0, 0, 0.25);
     display: block;
     font-weight: bold;
@@ -1892,6 +1892,17 @@ body {
       text-decoration: none; }
       #header #rightnav a:hover {
         color: #69F7EB; }
+      #header #rightnav a[href="#nav"] {
+        text-decoration: none;
+        -webkit-tap-highlight-color: transparent; }
+        #header #rightnav a[href="#nav"]:before {
+          content: "";
+          -moz-osx-font-smoothing: grayscale;
+          -webkit-font-smoothing: antialiased;
+          font-family: FontAwesome;
+          font-style: normal;
+          font-weight: normal;
+          text-transform: none !important; }
   #header #navsb {
     visibility: hidden;
     display: none; }
@@ -1937,12 +1948,6 @@ body {
         font-style: normal;
         font-weight: normal;
         text-transform: none !important; }
-      #header > a[href="#nav"]:before {
-        margin: 0 0.5em 0 0; }
-    #header > a + a[href="#nav"]:last-child {
-      border-left: solid 1px rgba(255, 255, 255, 0.15);
-      padding-left: 1.25em;
-      margin-left: 0.5em; }
     #header > a:last-child {
       padding-right: 1.25em; }
     @media screen and (max-width: 736px) {
@@ -1966,13 +1971,32 @@ body {
       display: inline; }
     #header #navsblg {
       visibility: hidden; }
+    #header #rightnav {
+      text-align: right; }
+      #header #rightnav a {
+        padding-left: 0px; }
     #header > h1 {
       left: 1em; }
       #header > h1 a {
         font-size: 1em; } }
 @media screen and (max-width: 480px) {
   #header {
-    min-width: 320px; } }
+    min-width: 320px;
+    height: 44px;
+    line-height: 44px; }
+    #header #navsb {
+      visibility: visible;
+      display: inline; }
+    #header #navsblg {
+      visibility: hidden; }
+    #header #rightnav {
+      text-align: right; }
+      #header #rightnav a {
+        padding-left: 0px; }
+    #header > h1 {
+      left: 1em; }
+      #header > h1 a {
+        font-size: 1em; } }
 /* Nav */
 #nav {
   -moz-transform: translateX(50em);
@@ -2137,9 +2161,6 @@ body {
 .homerollover:hover img {
   background-color: #81f8ee;
   opacity: 1.0; }
-.homerollover:active {
-  background-color: #51f6e8;
-  opacity: 0.4; }
 
 @media screen and (max-width: 1280px) {
   .secondrowimage {
