--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -133,41 +133,41 @@
 				}
 			}
 
-			@include breakpoint(xsmall) {
-				margin: 0 0 _size(element-margin) 0;
+			// @include breakpoint(xsmall) {
+			// 	margin: 0 0 _size(element-margin) 0;
 
-				li {
-					padding: (_size(element-margin) * 0.5) 0 0 0;
-					display: block;
-					text-align: center;
-					width: 100%;
+			// 	li {
+			// 		padding: (_size(element-margin) * 0.5) 0 0 0;
+			// 		display: block;
+			// 		text-align: center;
+			// 		// width: 100%;
 
-					&:first-child {
-						padding-top: 0;
-					}
+			// 		&:first-child {
+			// 			padding-top: 0;
+			// 		}
 
-					> * {
-						width: 100%;
-						margin: 0 !important;
+			// 		> * {
+			// 			 width: 100%;
+			// 			margin: 0 !important;
 
-						&.icon {
-							&:before {
-								margin-left: -2em;
-							}
-						}
-					}
-				}
+			// 			&.icon {
+			// 				&:before {
+			// 					margin-left: -2em;
+			// 				}
+			// 			}
+			// 		}
+			// 	}
 
-				&.small {
-					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
+			// 	&.small {
+			// 		li {
+			// 			padding: (_size(element-margin) * 0.25) 0 0 0;
 
-						&:first-child {
-							padding-top: 0;
-						}
-					}
-				}
-			}
+			// 			&:first-child {
+			// 				padding-top: 0;
+			// 			}
+			// 		}
+			// 	}
+			// }
 		}
 	}
 
