--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -135,6 +135,7 @@
 			#navsb {
 				visibility: visible;
 				display: inline;
+				margin-right: 20px;
 			}
 			#navsblg {
 				visibility: hidden;
@@ -166,6 +167,7 @@
 			#navsb {
 				visibility: visible;
 				display: inline;
+				margin-right: 10px;
 			}
 			#navsblg {
 				visibility: hidden;
