--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -318,37 +318,37 @@ body {
   clear: left; }
 
 .\-11u {
-  margin-left: 91.6666666667%; }
+  margin-left: 91.66667%; }
 
 .\-10u {
-  margin-left: 83.3333333333%; }
+  margin-left: 83.33333%; }
 
 .\-9u {
   margin-left: 75%; }
 
 .\-8u {
-  margin-left: 66.6666666667%; }
+  margin-left: 66.66667%; }
 
 .\-7u {
-  margin-left: 58.3333333333%; }
+  margin-left: 58.33333%; }
 
 .\-6u {
   margin-left: 50%; }
 
 .\-5u {
-  margin-left: 41.6666666667%; }
+  margin-left: 41.66667%; }
 
 .\-4u {
-  margin-left: 33.3333333333%; }
+  margin-left: 33.33333%; }
 
 .\-3u {
   margin-left: 25%; }
 
 .\-2u {
-  margin-left: 16.6666666667%; }
+  margin-left: 16.66667%; }
 
 .\-1u {
-  margin-left: 8.3333333333%; }
+  margin-left: 8.33333%; }
 
 @media screen and (max-width: 1680px) {
   .row > * {
@@ -486,37 +486,37 @@ body {
     clear: left; }
 
   .\-11u\28xlarge\29 {
-    margin-left: 91.6666666667%; }
+    margin-left: 91.66667%; }
 
   .\-10u\28xlarge\29 {
-    margin-left: 83.3333333333%; }
+    margin-left: 83.33333%; }
 
   .\-9u\28xlarge\29 {
     margin-left: 75%; }
 
   .\-8u\28xlarge\29 {
-    margin-left: 66.6666666667%; }
+    margin-left: 66.66667%; }
 
   .\-7u\28xlarge\29 {
-    margin-left: 58.3333333333%; }
+    margin-left: 58.33333%; }
 
   .\-6u\28xlarge\29 {
     margin-left: 50%; }
 
   .\-5u\28xlarge\29 {
-    margin-left: 41.6666666667%; }
+    margin-left: 41.66667%; }
 
   .\-4u\28xlarge\29 {
-    margin-left: 33.3333333333%; }
+    margin-left: 33.33333%; }
 
   .\-3u\28xlarge\29 {
     margin-left: 25%; }
 
   .\-2u\28xlarge\29 {
-    margin-left: 16.6666666667%; }
+    margin-left: 16.66667%; }
 
   .\-1u\28xlarge\29 {
-    margin-left: 8.3333333333%; } }
+    margin-left: 8.33333%; } }
 @media screen and (max-width: 1280px) {
   .row > * {
     padding: 0 0 0 1.5em; }
@@ -653,37 +653,37 @@ body {
     clear: left; }
 
   .\-11u\28large\29 {
-    margin-left: 91.6666666667%; }
+    margin-left: 91.66667%; }
 
   .\-10u\28large\29 {
-    margin-left: 83.3333333333%; }
+    margin-left: 83.33333%; }
 
   .\-9u\28large\29 {
     margin-left: 75%; }
 
   .\-8u\28large\29 {
-    margin-left: 66.6666666667%; }
+    margin-left: 66.66667%; }
 
   .\-7u\28large\29 {
-    margin-left: 58.3333333333%; }
+    margin-left: 58.33333%; }
 
   .\-6u\28large\29 {
     margin-left: 50%; }
 
   .\-5u\28large\29 {
-    margin-left: 41.6666666667%; }
+    margin-left: 41.66667%; }
 
   .\-4u\28large\29 {
-    margin-left: 33.3333333333%; }
+    margin-left: 33.33333%; }
 
   .\-3u\28large\29 {
     margin-left: 25%; }
 
   .\-2u\28large\29 {
-    margin-left: 16.6666666667%; }
+    margin-left: 16.66667%; }
 
   .\-1u\28large\29 {
-    margin-left: 8.3333333333%; } }
+    margin-left: 8.33333%; } }
 @media screen and (max-width: 980px) {
   .row > * {
     padding: 0 0 0 1.5em; }
@@ -820,37 +820,37 @@ body {
     clear: left; }
 
   .\-11u\28medium\29 {
-    margin-left: 91.6666666667%; }
+    margin-left: 91.66667%; }
 
   .\-10u\28medium\29 {
-    margin-left: 83.3333333333%; }
+    margin-left: 83.33333%; }
 
   .\-9u\28medium\29 {
     margin-left: 75%; }
 
   .\-8u\28medium\29 {
-    margin-left: 66.6666666667%; }
+    margin-left: 66.66667%; }
 
   .\-7u\28medium\29 {
-    margin-left: 58.3333333333%; }
+    margin-left: 58.33333%; }
 
   .\-6u\28medium\29 {
     margin-left: 50%; }
 
   .\-5u\28medium\29 {
-    margin-left: 41.6666666667%; }
+    margin-left: 41.66667%; }
 
   .\-4u\28medium\29 {
-    margin-left: 33.3333333333%; }
+    margin-left: 33.33333%; }
 
   .\-3u\28medium\29 {
     margin-left: 25%; }
 
   .\-2u\28medium\29 {
-    margin-left: 16.6666666667%; }
+    margin-left: 16.66667%; }
 
   .\-1u\28medium\29 {
-    margin-left: 8.3333333333%; } }
+    margin-left: 8.33333%; } }
 @media screen and (max-width: 736px) {
   .row > * {
     padding: 0 0 0 1.25em; }
@@ -987,37 +987,37 @@ body {
     clear: left; }
 
   .\-11u\28small\29 {
-    margin-left: 91.6666666667%; }
+    margin-left: 91.66667%; }
 
   .\-10u\28small\29 {
-    margin-left: 83.3333333333%; }
+    margin-left: 83.33333%; }
 
   .\-9u\28small\29 {
     margin-left: 75%; }
 
   .\-8u\28small\29 {
-    margin-left: 66.6666666667%; }
+    margin-left: 66.66667%; }
 
   .\-7u\28small\29 {
-    margin-left: 58.3333333333%; }
+    margin-left: 58.33333%; }
 
   .\-6u\28small\29 {
     margin-left: 50%; }
 
   .\-5u\28small\29 {
-    margin-left: 41.6666666667%; }
+    margin-left: 41.66667%; }
 
   .\-4u\28small\29 {
-    margin-left: 33.3333333333%; }
+    margin-left: 33.33333%; }
 
   .\-3u\28small\29 {
     margin-left: 25%; }
 
   .\-2u\28small\29 {
-    margin-left: 16.6666666667%; }
+    margin-left: 16.66667%; }
 
   .\-1u\28small\29 {
-    margin-left: 8.3333333333%; } }
+    margin-left: 8.33333%; } }
 @media screen and (max-width: 480px) {
   .row > * {
     padding: 0 0 0 1.25em; }
@@ -1154,37 +1154,37 @@ body {
     clear: left; }
 
   .\-11u\28xsmall\29 {
-    margin-left: 91.6666666667%; }
+    margin-left: 91.66667%; }
 
   .\-10u\28xsmall\29 {
-    margin-left: 83.3333333333%; }
+    margin-left: 83.33333%; }
 
   .\-9u\28xsmall\29 {
     margin-left: 75%; }
 
   .\-8u\28xsmall\29 {
-    margin-left: 66.6666666667%; }
+    margin-left: 66.66667%; }
 
   .\-7u\28xsmall\29 {
-    margin-left: 58.3333333333%; }
+    margin-left: 58.33333%; }
 
   .\-6u\28xsmall\29 {
     margin-left: 50%; }
 
   .\-5u\28xsmall\29 {
-    margin-left: 41.6666666667%; }
+    margin-left: 41.66667%; }
 
   .\-4u\28xsmall\29 {
-    margin-left: 33.3333333333%; }
+    margin-left: 33.33333%; }
 
   .\-3u\28xsmall\29 {
     margin-left: 25%; }
 
   .\-2u\28xsmall\29 {
-    margin-left: 16.6666666667%; }
+    margin-left: 16.66667%; }
 
   .\-1u\28xsmall\29 {
-    margin-left: 8.3333333333%; } }
+    margin-left: 8.33333%; } }
 /* Basic */
 @-ms-viewport {
   width: device-width; }
@@ -2140,6 +2140,12 @@ p a {
         margin-left: 0;
         padding-left: 0; } }
 
+#url a {
+  color: black;
+  text-decoration: none; }
+  #url a:hover {
+    color: #69F7EB; }
+
 .homerollover img {
   background-color: #81f8ee;
   opacity: 0.7; }
@@ -2174,3 +2180,5 @@ p a {
 
 .socialmediaicons {
   text-align: right; }
+
+/*# sourceMappingURL=main.css.map */
