--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1566,7 +1566,7 @@ input[type="radio"] + label:before {
   .image.fit {
     display: block;
     margin: 0 0 2em 0;
-    width: 100%; }
+    height: 100%; }
     .image.fit img {
       width: 100%; }
   .image.main {
