--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -41,9 +41,10 @@
 		&.fit {
 			display: block;
 			margin: 0 0 _size(element-margin) 0;
-			width: 100%;
+			height: 100%;
 
 			img {
+			
 				width: 100%;
 			}
 		}
